--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,6 +27,18 @@ body {
   background: #555;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 @layer components {
   .landing-bg-container {
     @apply h-[100vh] bg-fixed bg-no-repeat bg-cover bg-center transition-all relative;
